crates/macros/tests/sources/messages-missing-resource.stderr
error: Error processing resource: Error reading resource $DIR/tests/resources/simple-it.ftl
 --> tests/sources/messages-missing-resource.rs:6:48
  |
6 |         ("tests/resources/simple-it.ftl", "it")],
  |                                                ^

error[E0433]: failed to resolve: use of undeclared type `Messages`
  --> tests/sources/messages-missing-resource.rs:12:20
   |
12 |     let messages = Messages::default();
   |                    ^^^^^^^^ use of undeclared type `Messages`
   |
help: consider importing this struct
   |
1  + use std::os::unix::net::Messages;
   |
